manifests/base/ingress/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nuage-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: nuage-tls-cert
    hosts:
    - "*"
  - port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: true
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: file-server-virtualservice
  namespace: default
spec:
  hosts:
  - "file-server.nuage"
  gateways:
  - nuage-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: file-server-api.pechka.svc.cluster.local
        port:
          number: 8000
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: file-server-ui.pechka.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argo-workflow-virtualservice
  namespace: default
spec:
  hosts:
  - "workflow.dev.nuage"
  gateways:
  - nuage-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: argo-server.pechka.svc.cluster.local
        port:
          number: 2746
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali-virtualservice
  namespace: default
spec:
  hosts:
  - "kiali.dev.nuage"
  gateways:
  - nuage-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-virtualservice
  namespace: default
spec:
  hosts:
  - "grafana.dev.nuage"
  gateways:
  - nuage-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: prometheus-grafana.ops.svc.cluster.local
        port:
          number: 80
    corsPolicy:
      allowOrigins:
      - exact: "*"

      allowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS

      allowHeaders:
      - Content-Type
      - Authorization

      allowCredentials: true

      maxAge: "24h"
    headers:
      response:
        remove:
        - X-Frame-Options
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: loki-virtualservice
  namespace: default
spec:
  hosts:
  - "loki.internal.nuage"
  gateways:
  - nuage-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: loki.ops.svc.cluster.local
        port:
          number: 3100
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dashboard-v2-virtualservice
  namespace: default
spec:
  hosts:
  # - "dashboard-v2.nuage"
  - "*"
  gateways:
  - nuage-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: dashboard-bff.dashboard-v2.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: dashboard-ui.dashboard-v2.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-virtualservice
  namespace: default
spec:
  hosts:
  - "argocd.dev.nuage"
  gateways:
  - nuage-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 443
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nuage-monitoring-virtualservice
  namespace: default
spec:
  hosts:
  - "monitoring.dev.nuage"
  gateways:
  - nuage-gateway
  http:
  - match:
    - uri:
        prefix: /graphql
    route:
    - destination:
        host: gateway.nuage-monitoring.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ui.nuage-monitoring.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cdn-virtualservice
  namespace: default
spec:
  hosts:
  - "minio.cdn.nuage"
  gateways:
  - nuage-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: varnish.public.svc.cluster.local
        port:
          number: 80
